objects/Address_SFDC2__c.object
<CustomObject>
    <description>SFDC2 Address objects are used to allow storing an unlimited number of current and historical addresses for Leads, Business Accounts and Personal Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>JH Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender__c</fullName>
        <label>Mortgage Lender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <inlineHelpText>Please enter a five digit zip code, or a zip +4 code in the following format: #####-####</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>ADDR-{0000}</displayFormat>
        <label>Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Account_Address</fullName>
        <active>true</active>
        <label>Account Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Address</fullName>
        <active>true</active>
        <label>Lead Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>JH_Customer</fullName>
        <active>true</active>
        <description>Prevent primary addresses from being updated on JH accounts</description>
        <errorConditionFormula>IF( !ISNULL( Account__c ) 
&amp;&amp; LEFT( Account__r.Account_Type_SFDC2__c, 2 ) == &apos;JH&apos;
    &amp;&amp; LEFT(  RecordType.DeveloperName , 7 ) == &apos;Primary&apos;, 
true 
, 
false 
)</errorConditionFormula>
        <errorMessage>Primary addresses on accounts with JH customer records must be updated in JH.</errorMessage>
    </validationRules>
</CustomObject>